# Haskell-Foundations

./: README.md
Recursion/: CHANGELOG.md  LICENSE  Recursion.cabal  tempCodeRunnerFile.jxa
Recursion/app/: Main.hs
Recursion/src/: BinaryTrees.hs  listRecursion.hs
Recursion/tests/: ArbitrarySet.hs  BinaryTreesTest.hs  TH.hs  tempCodeRunnerFile.hs
